att expansão e limpeza de pixels